POC to Fix scrolling issue by replacing ng-scrollbar with perfect-scrollbar

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2181,6 +2181,8 @@ footer .right>span:nth-child(2) {
 }
 .panelCodeProblem .panel-body{
     height: 169px;
+    position: relative;
+    overflow: hidden;
 }
 .panelCodeProblem .panel-body .statement {
     padding: 14px 31px 14px;
@@ -9032,4 +9034,13 @@ table thead .sort.desc{
 }
 .settings-panel .bootstrap-switch.bootstrap-switch-off .bootstrap-switch-container {
     margin-left: -100%;
+}
+
+/*
+* Perfect Scrollbar styles
+*/
+/* to make scrollbars always visible */
+.always-visible.ps-container > .ps-scrollbar-x-rail,
+.always-visible.ps-container > .ps-scrollbar-y-rail {
+    opacity: 0.6;
 }
